--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
         width: 30%;
         font-size: 16px;
         height: 54px;
-        padding: 12px;
+        padding: 0;
     }
     .form .success-message {
         width: 99%;
