--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
         width: 30%;
         font-size: 17px;
         height: 54px;
-        padding: 0;
+        padding-bottom: 1px;
     }
     .form .success-message {
         width: 99%;
