--- a/style.css
+++ b/style.css
@@ -117,9 +117,10 @@ body {
     }
     .form button {
         width: 30%;
-        font-size: 17px;
+        font-size: 16px;
         height: 54px;
-        padding-bottom: 1px;
+        padding: 0;
+        margin: 0 0 15px;
     }
     .form .success-message {
         width: 99%;
