--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
         font-size: 16px;
         height: 54px;
         padding: 0;
-        margin: 0 0 15px;
+        margin-top: 15px;
     }
     .form .success-message {
         width: 99%;
