--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ body {
 }
 
 @media (max-width: 566px) {
+    #inputBlock {
+        height: 54px;
+    }
     .login-page {
         width: 100%;
         padding-top: 33%;
@@ -112,15 +115,16 @@ body {
     }
     .form input {
         width: 69%;
-        height: 54px;
+        height: 100%;
         padding: 12px 10px;
+        margin: 0;
     }
     .form button {
         width: 30%;
         font-size: 16px;
-        height: 54px;
+        height: 100%;
         padding: 0;
-        margin-top: 15px;
+        /*margin-top: 15px;*/
     }
     .form .success-message {
         width: 99%;
