--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ body {
         height: 100%;
         padding: 12px 10px;
         margin: 0;
+        vertical-align: middle;
     }
     .form button {
         width: 30%;
@@ -125,6 +126,7 @@ body {
         height: 100%;
         padding: 0;
         /*margin-top: 15px;*/
+        vertical-align: middle;
     }
     .form .success-message {
         width: 99%;
