new error message design

--- a/style.css
+++ b/style.css
@@ -93,10 +93,23 @@ body {
     margin: 19px;
 }
 .form .error-message {
-    color: #EB5757;
+    height: 40px;
+    color: #FFFFFF;
+    background-color: #EB5757;
     display: none;
-    margin-bottom: 0;
+    margin: 0 auto;
+    width: 400px;
+    border-radius: 4px;
 }
+    .form .error-message > img {
+        vertical-align: sub;
+        margin-right: 20px;
+    }
+    .form .error-message > p {
+        display: inline-block;
+        padding-top: 12px;
+        font-size: 16px;
+    }
 
 @media (max-width: 566px) {
     #inputBlock {
@@ -132,6 +145,20 @@ body {
         width: 99%;
         height: auto;
     }
+    .form .error-message {
+        margin-top: 10px;
+        width: 97%;
+        height: auto;
+        padding-right: 1%;
+        padding-left: 1%;
+    }
+        .form .error-message > img {
+            margin: 12px 0 0 0;
+        }
+       .form .error-message > p {
+           margin-bottom: 0;
+           padding-bottom: 12px;
+       }
 }
 
 @media (max-width: 460px) {
