--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,18 @@ p {
     color: rgba(0, 0, 0, 0.3);
 }
 
+.table-display {
+    display: table;
+}
+    .table-display .table-cell {
+        display: table-cell;
+        vertical-align: bottom;
+        float: none;
+    }
+    .table-display .table-cell.middle {
+        vertical-align: middle;
+    }
+
 .inline-emoji {
     width: 40px;
     display: inline-block;
@@ -36,28 +48,28 @@ p {
 }
 
 .arnold-example > img {
-    max-width: 400px;
+    max-width: 100%;
+    bottom: 0;
 }
 .arnold-benefits {
-    padding: 100px 100px 0 30px;
+    padding-left: 30px;
 }
+    .arnold-benefits h1 {
+        margin-top: 0;
+    }
     .arnold-benefits .benefits-list {
         padding-top: 30px;
         padding-left: 0;
         font-size: 21px;
         font-weight: 600;
-        /*line-height: 130%;*/
         display: table;
     }
         .arnold-benefits .benefits-list > li {
             display: block;
-            /*list-style-type: none;*/
             list-style-image: url("../images/list-style.png");
             margin: 10px 0;
-            /*vertical-align: middle;*/
         }
             .arnold-benefits .benefits-list > li .inline-emoji {
-                /*vertical-align: middle;*/
                 margin-bottom: 4px;
                 margin-right: 12px;
             }
@@ -186,6 +198,7 @@ p {
 }
     .slide-2 .benefits-container {
         padding-left: 0;
+        padding-right: 0;
     }
         .slide-2 .arnold-example {
             padding-right: 30px;
@@ -223,7 +236,7 @@ p {
 }
     .slide-4 .top {
         background-color: #38EC83;
-        padding: 100px 0;
+        padding: 80px 0 90px;
     }
         .slide-4 .top h1 {
             color: #FFFFFF !important;
@@ -240,6 +253,9 @@ p {
         .slide-4 .bottom .writing {
             padding: 0 30px;
         }
+            .slide-4 .bottom .writing > img {
+                max-width: 100%;
+            }
 /*Slide-4 styles end*/
 
 /*Slide-5 styles begin*/
@@ -255,6 +271,170 @@ p {
         padding-bottom: 100px;
     }
 /*Slide-5 styles end*/
+
+
+@media (max-width: 1199px) {
+    h1 {
+        font-size: 42px !important;
+    }
+    p {
+        font-size: 19px !important;
+    }
+    .form input {
+        font-size: 19px;
+        padding: 12px 16px;
+    }
+    .inline-emoji {
+        width: 32px;
+    }
+
+    .arnold-benefits .benefits-list {
+        padding-top: 20px;
+    }
+        .arnold-benefits .benefits-list > li {
+            font-size: 19px;
+        }
+}
+
+@media (max-width: 1083px) {
+    .arnold-benefits .benefits-list {
+        padding-top: 10px;
+    }
+        .arnold-benefits .benefits-list > li:last-child {
+            margin-bottom: 0;
+        }
+}
+
+@media (max-width: 991px) {
+    .slide-4 .bottom .writing {
+        padding: 0 20px;
+    }
+}
+
+@media (max-width: 767px) {
+    body {
+        text-align: center;
+    }
+    .login-page {
+        padding-top: 13%;
+    }
+    .inline-emoji {
+        display: none;
+    }
+    .top-heading {
+        text-align: center;
+    }
+    .table-display {
+        display: block;
+    }
+        .table-display .table-cell {
+            display: block;
+        }
+    .arnold-benefits {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+        .arnold-benefits .benefits-list {
+            text-align: left;
+            margin: 20px auto 30px;
+        }
+            .arnold-benefits .benefits-list > li .inline-emoji {
+                display: inline-block;
+            }
+
+    .next-line {
+        display: block;
+    }
+
+    .slide-2,
+    .slide-3 {
+        padding-top: 60px;
+    }
+
+    .slide-2 .arnold-benefits,
+    .slide-3 .arnold-benefits {
+        padding-left: 36px;
+        padding-right: 36px;
+    }
+
+    .slide-2 .arnold-example,
+    .slide-3 .arnold-example {
+        padding-left: 36px;
+        padding-right: 36px;
+    }
+
+    .slide-4 {
+        padding-bottom: 60px;
+    }
+
+    .slide-4 .top {
+        padding-top: 50px;
+        padding-bottom: 60px;
+    }
+
+    .slide-4 .middle {
+        padding-top: 50px;
+        padding-left: 36px;
+        padding-right: 36px;
+    }
+
+    .slide-4 .bottom .writing {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .slide-5 .form {
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+}
+
+@media (max-width: 666px) {
+    .login-page {
+        width: 100%;
+    }
+    .slide-4 .bottom .writing {
+        padding: 0 10px;
+    }
+    .slide-5 .login-page {
+        width: 100%;
+    }
+
+    .form input {
+        width: 69%;
+        height: 100%;
+    }
+    .form button {
+        width: 30%;
+        font-size: 19px;
+        height: 52px;
+        padding-top: 14px;
+    }
+    .form .success-message {
+        width: 99%;
+        height: 52px;
+    }
+        .form .success-message p {
+            margin-top: 14px;
+        }
+    .form .error-message {
+        margin-top: 10px;
+        width: 99%;
+        height: 44px;
+        padding-right: 1%;
+        padding-left: 1%;
+    }
+        .form .error-message p {
+            padding-top: 10px;
+        }
+    .form .error-message > img {
+        margin: 12px 0 0 0;
+    }
+    .form .error-message > p {
+        margin-bottom: 0;
+        padding-bottom: 12px;
+    }
+}
 
 @media (max-width: 566px) {
     .inputBlock {
