--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
     overflow-x: hidden;
 }
 
+.navbar-default .navbar-collapse {
+    border: none;
+}
 .navbar.navbar-default {
     border-radius: 0;
     background-color: #FFFFFF;
